refactor data_zone_code and data_zone_name fix openapi.json
